fixed collapse/expand functionality

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -273,6 +273,7 @@ td {
 .content-secondary {
   display: relative;
   background-color: $contrast-color;
+  max-height: 0px;
   overflow: hidden;
 }
 
